latex_compiler/grammar.txt
tiny:
		Num
		Var
		Const
		Lparen add_sub Rparen
		Func (suffix)? Lparen add_sub Rparen

		frac Lbrace add_sub Rbrace Lbrace add_sub Rbrace

suffix:
		(SubScript)? (char|(Lbrace add_sub Rbrace)) (SuperScript)? (char|(Lbrace add_sub Rbrace))
		(SuperScript)? (char|(Lbrace add_sub Rbrace)) (SubScript)? (char|(Lbrace add_sub Rbrace))

tiny_suffix:
		tiny suffix

simple:
		(Add|Sub)* tiny_suffix

mul_div:
		simple (((Mul|Div) simple)|tiny_suffix)*

add_sub:
		mul_div ((Add|Sub) mul_div)*
